--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "r3f-perf": "^7.2.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-glsl": "^1.3.0"
   }
 }
