--- a/main/frontend_ssr/tsconfig.json
+++ b/main/frontend_ssr/tsconfig.json
@@ -19,7 +19,8 @@
     ],
     "types": [
       "vite/client",
-      "vike-react"
+      "vike-react",
+      "vite-plugin-glsl/ext"
     ],
     "jsx": "preserve",
     "jsxImportSource": "react"
