--- a/main/frontend_ssr/package.json
+++ b/main/frontend_ssr/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -26,12 +27,13 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
-    "vite-plugin-glsl": "^1.3.0"
+    "vite-plugin-glsl": "^1.3.0",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@types/three": "^0.164.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@types/three": "^0.164.0",
     "@vitejs/plugin-react": "^4.2.1",
     "cross-fetch": "^4.0.0",
     "leva": "^0.9.35",
